force-app/main/default/objects/Community__c/Community__c.object-meta.xml
<CustomObject>
    <label>Community</label>
    <nameField>
        <label>Community</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>