force-app/main/default/objects/Community__c/fields/Actual_Of_Houses__c.field-meta.xml
<CustomField>
    <fullName>Actual_Of_Houses__c</fullName>
    <label>Actual # Of Houses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>