force-app/main/default/objects/Community__c/fields/Build_Cycle_for_Community__c.field-meta.xml
<CustomField>
    <fullName>Build_Cycle_for_Community__c</fullName>
    <inlineHelpText>Dates to finish: Express =85-112, Normal =133-142, Custom = 131-148, Custom Plus = 181-208</inlineHelpText>
    <label>Build Cycle for Community</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Express Production Cycle</fullName>
            </value>
            <value>
                <fullName>Normal Production Cycle</fullName>
            </value>
            <value>
                <fullName>Custom Production Cycle</fullName>
            </value>
            <value>
                <fullName>Custom Plus Production Cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>