force-app/main/default/objects/Community__c/fields/Builder__c.field-meta.xml
<CustomField>
    <fullName>Builder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Communities</relationshipLabel>
    <relationshipName>Sub_Divisions</relationshipName>
    <type>Lookup</type>
</CustomField>