force-app/main/default/objects/Community__c/fields/Builder_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Builder_ID_18__c</fullName>
    <formula>Builder__r.Account_Id_18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Builder ID (18)</label>
    <type>Text</type>
</CustomField>