force-app/main/default/objects/Community__c/fields/Builder_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Builder_Name_Text__c</fullName>
    <description>This field is used to display the builder&apos;s name on the global search as a secondary field on the community. It is populated on creation/edit by Process Builder.</description>
    <label>Builder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>