force-app/main/default/objects/Community__c/fields/Builder_Profile__c.field-meta.xml
<CustomField>
    <fullName>Builder_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder Profile</label>
    <referenceTo>Builder_Profile__c</referenceTo>
    <relationshipLabel>Communities</relationshipLabel>
    <relationshipName>Communities</relationshipName>
    <type>Lookup</type>
</CustomField>