force-app/main/default/objects/Community__c/fields/Case_Manager__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field should be populated only by Entities using Automatic Case Assignment. This field allows process builder to automatically assign new cases to the Case Manager upon creation. If this field is populated by an Entity not using Auto case assignment, nothing will happen.</description>
    <label>Case Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Communities</relationshipName>
    <type>Lookup</type>
</CustomField>