force-app/main/default/objects/Community__c/fields/Channel_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Channel_of_Business__c</fullName>
    <label>Channel of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Family</fullName>
            </value>
            <value>
                <fullName>Multi-Family - New</fullName>
            </value>
            <value>
                <fullName>Muti-Family - Relay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>