force-app/main/default/objects/Community__c/fields/Community_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Community_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community ID(18)</label>
    <type>Text</type>
</CustomField>