force-app/main/default/objects/Community__c/fields/Community_Status__c.field-meta.xml
<CustomField>
    <fullName>Community_Status__c</fullName>
    <label>Community Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Builder Assigned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>ADG Work completed</fullName>
            </value>
            <value>
                <fullName>Community Completed</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>