force-app/main/default/objects/Community__c/fields/Community_Type__c.field-meta.xml
<CustomField>
    <fullName>Community_Type__c</fullName>
    <label>Community Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Upscale</fullName>
                <isActive>false</isActive>
                <label>Upscale</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>