force-app/main/default/objects/Community__c/fields/Control_Date_Tasks_Needed__c.field-meta.xml
<CustomField>
    <fullName>Control_Date_Tasks_Needed__c</fullName>
    <inlineHelpText>Select Yes to generate QC &amp; Tasks as reminder to confirm Slab, Dried-In &amp; Order Date (by house).   Select No does not generate task reminders or QC forms.</inlineHelpText>
    <label>Pre-Walk &amp; Job Start QC Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>