force-app/main/default/objects/Community__c/fields/Day_Count_QC_End__c.field-meta.xml
<CustomField>
    <fullName>Day_Count_QC_End__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Day Count QC End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>