force-app/main/default/objects/Community__c/fields/Day_Count_Tile_Backsplash__c.field-meta.xml
<CustomField>
    <fullName>Day_Count_Tile_Backsplash__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Day Count Tile Backsplash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>