force-app/main/default/objects/Community__c/fields/Days_to_Dried_In__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Dried_In__c</fullName>
    <formula>CASE(Build_Cycle_for_Community__c ,
&quot;Express Production Cycle&quot;, &quot;38&quot;,
&quot;Normal Production Cycle&quot;, &quot;42&quot;,
&quot;Custom Production Cycle&quot;, &quot;70&quot;,
&quot;Custom Plus Production Cycle&quot;, &quot;85&quot;,
&quot;Test Cycle&quot;, &quot;1&quot;,
&quot;&quot;,NULL,
&quot;No Cycle Time Assigned&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days to Dried-In from Foundation Date</inlineHelpText>
    <label>Days to Dried-In</label>
    <type>Text</type>
</CustomField>