force-app/main/default/objects/Community__c/fields/Days_to_Finish_Install__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Finish_Install__c</fullName>
    <formula>CASE(Build_Cycle_for_Community__c  ,
&quot;Express Production Cycle&quot;, &quot;31&quot;,
&quot;Normal Production Cycle&quot;, &quot;59&quot;,
&quot;Custom Production Cycle&quot;, &quot;46&quot;,
&quot;Custom Plus Production Cycle&quot;, &quot;56&quot;,
&quot;Test Cycle&quot;, &quot;1&quot;,
&quot;&quot;,NULL, 
&quot;No Cycle Time Assigned&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days from Dried-in</inlineHelpText>
    <label>Days to Finish/Install</label>
    <type>Text</type>
</CustomField>