force-app/main/default/objects/Community__c/fields/Days_to_Framing__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Framing__c</fullName>
    <formula>CASE(Build_Cycle_for_Community__c  ,
&quot;Express Production Cycle&quot;, &quot;19&quot;,
&quot;Normal Production Cycle&quot;, &quot;19&quot;,
&quot;Custom Production Cycle&quot;, &quot;37&quot;,
&quot;Custom Plus Production Cycle&quot;, &quot;46&quot;,
&quot;Test Cycle&quot;, &quot;1&quot;,
&quot;&quot;,NULL, 
&quot;No Cycle Time Assigned&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days from estimated Foundation date</inlineHelpText>
    <label>Days to Framing</label>
    <type>Text</type>
</CustomField>