force-app/main/default/objects/Community__c/fields/Days_to_Install__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Install__c</fullName>
    <formula>CASE(Build_Cycle_for_Community__c  ,
&quot;45&quot;, &quot;16&quot;,
&quot;50&quot;, &quot;16&quot;,
&quot;60&quot;, &quot;16&quot;,
&quot;70&quot;, &quot;16&quot;,
&quot;80&quot;, &quot;16&quot;,
&quot;90&quot;, &quot;16&quot;,
&quot;100&quot;, &quot;16&quot;,
&quot;110&quot;, &quot;16&quot;,
&quot;120&quot;, &quot;16&quot;,
&quot;130&quot;, &quot;16&quot;,
&quot;140&quot;, &quot;16&quot;,
&quot;150&quot;, &quot;16&quot;,
&quot;&quot;,NULL, 
&quot;No Cycle Time Assigned&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days from estimated dried-in</inlineHelpText>
    <label>Days to Install</label>
    <type>Text</type>
</CustomField>