force-app/main/default/objects/Community__c/fields/Days_to_Order__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Order__c</fullName>
    <formula>CASE(Build_Cycle_for_Community__c  ,
&quot;Express Production Cycle&quot;, &quot;11&quot;,
&quot;Normal Production Cycle&quot;, &quot;17&quot;,
&quot;Custom Production Cycle&quot;, &quot;18&quot;,
&quot;Custom Plus Production Cycle&quot;, &quot;20&quot;,
&quot;Test Cycle&quot;, &quot;1&quot;,
&quot;&quot;,NULL,
&quot;No Cycle Time Assigned&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days from Dried-In date</inlineHelpText>
    <label>Days to Order Tile</label>
    <type>Text</type>
</CustomField>