force-app/main/default/objects/Community__c/fields/Days_to_QC_Job_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_to_QC_Job_Start__c</fullName>
    <formula>CASE( Build_Cycle_for_Community__c  ,
&quot;Express Production Cycle&quot;, &quot;32&quot;,
&quot;Normal Production Cycle&quot;, &quot;60&quot;,
&quot;Custom Production Cycle&quot;, &quot;48&quot;,
&quot;Custom Plus Production Cycle&quot;, &quot;48&quot;,
&quot;Test Cycle&quot;, &quot;2&quot;,
&quot;&quot;,NULL,
&quot;No Cycle Time Assigned&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to QC Job Start</label>
    <type>Text</type>
</CustomField>