force-app/main/default/objects/Community__c/fields/Days_to_QC_Pre_Walk__c.field-meta.xml
<CustomField>
    <fullName>Days_to_QC_Pre_Walk__c</fullName>
    <formula>CASE(Build_Cycle_for_Community__c  ,
&quot;Express Production Cycle&quot;, &quot;8&quot;,
&quot;Normal Production Cycle&quot;, &quot;14&quot;,
&quot;Custom Production Cycle&quot;, &quot;15&quot;,
&quot;Custom Plus Production Cycle&quot;, &quot;15&quot;,
&quot;Test Cycle&quot;, &quot;1&quot;,
&quot;&quot;,NULL,
&quot;No Cycle Time Assigned&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to QC Pre-Walk</label>
    <type>Text</type>
</CustomField>