force-app/main/default/objects/Community__c/fields/EntityIntegration__c.field-meta.xml
<CustomField>
    <fullName>EntityIntegration__c</fullName>
    <inlineHelpText>Only used in integration and can only be added to one community per entity for &quot;orphaned&quot; house records</inlineHelpText>
    <label>EntityIntegration</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>