force-app/main/default/objects/Community__c/fields/Estimated_of_Homes_Units__c.field-meta.xml
<CustomField>
    <fullName>Estimated_of_Homes_Units__c</fullName>
    <label>Estimated # of Homes/Units</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>