force-app/main/default/objects/Community__c/fields/Estimated_Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Project_Duration__c</fullName>
    <label>Estimated Project Duration [months]</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>