force-app/main/default/objects/Community__c/fields/Field_Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Must be Service Resource</inlineHelpText>
    <label>Field Service Manager</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipName>Communities</relationshipName>
    <type>Lookup</type>
</CustomField>