force-app/main/default/objects/Community__c/fields/FSM_Service_Resource_ID_18__c.field-meta.xml
<CustomField>
    <fullName>FSM_Service_Resource_ID_18__c</fullName>
    <formula>Field_Service_Manager__r.Service_Resource_ID_18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSM Service Resource ID (18)</label>
    <type>Text</type>
</CustomField>