force-app/main/default/objects/Community__c/fields/House_Type__c.field-meta.xml
<CustomField>
    <fullName>House_Type__c</fullName>
    <label>House Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>High End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>