force-app/main/default/objects/Community__c/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Must be a service resource</inlineHelpText>
    <label>Pre-Walk</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Communities (Pre-Walk Inspector)</relationshipLabel>
    <relationshipName>Communities1</relationshipName>
    <type>Lookup</type>
</CustomField>