force-app/main/default/objects/Community__c/fields/Integration_Key_Community__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key_Community__c</fullName>
    <externalId>true</externalId>
    <label>Integration Key Community</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>