force-app/main/default/objects/Community__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Entity__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Austin</fullName>
            </value>
            <value>
                <fullName>Charleston</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Colorado Springs</fullName>
            </value>
            <value>
                <fullName>Corpus Christi</fullName>
            </value>
            <value>
                <fullName>Columbia</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>DFW</fullName>
            </value>
            <value>
                <fullName>Fayetteville</fullName>
            </value>
            <value>
                <fullName>Grafton</fullName>
            </value>
            <value>
                <fullName>Greensboro</fullName>
            </value>
            <value>
                <fullName>Greenville</fullName>
            </value>
            <value>
                <fullName>Hilton Head</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Indianapolis</fullName>
            </value>
            <value>
                <fullName>Loveland</fullName>
            </value>
            <value>
                <fullName>Myrtle Beach</fullName>
            </value>
            <value>
                <fullName>Nashville</fullName>
            </value>
            <value>
                <fullName>North Carolina</fullName>
            </value>
            <value>
                <fullName>Peninsula</fullName>
            </value>
            <value>
                <fullName>Phoenix</fullName>
            </value>
            <value>
                <fullName>Raleigh</fullName>
            </value>
            <value>
                <fullName>Salt Lake City</fullName>
            </value>
            <value>
                <fullName>San Antonio</fullName>
            </value>
            <value>
                <fullName>San Marcos</fullName>
            </value>
            <value>
                <fullName>South Carolina</fullName>
            </value>
            <value>
                <fullName>Tucson</fullName>
            </value>
            <value>
                <fullName>Wilmington</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>