force-app/main/default/objects/Community__c/fields/Location_Notes__c.field-meta.xml
<CustomField>
    <fullName>Location_Notes__c</fullName>
    <label>Location Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>