force-app/main/default/objects/Community__c/fields/Owner_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Owner_ID_18__c</fullName>
    <formula>Owner:User.Case_Safe_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner ID (18)</label>
    <type>Text</type>
</CustomField>