force-app/main/default/objects/Community__c/fields/Owner_Location__c.field-meta.xml
<CustomField>
    <fullName>Owner_Location__c</fullName>
    <formula>TEXT(Owner:User.Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Location</label>
    <type>Text</type>
</CustomField>