force-app/main/default/objects/Community__c/fields/Product_Families__c.field-meta.xml
<CustomField>
    <fullName>Product_Families__c</fullName>
    <label>Product Families</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cabinets</fullName>
            </value>
            <value>
                <fullName>Countertops</fullName>
            </value>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>Specialties</fullName>
            </value>
            <value>
                <fullName>Window Treatments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>