force-app/main/default/objects/Community__c/fields/QC_Build_Sheet__c.field-meta.xml
<CustomField>
    <fullName>QC_Build_Sheet__c</fullName>
    <label>QC Build Sheet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>