force-app/main/default/objects/Community__c/fields/QC_Countertops_Install__c.field-meta.xml
<CustomField>
    <fullName>QC_Countertops_Install__c</fullName>
    <label>QC Countertops Install</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>