force-app/main/default/objects/Community__c/fields/QC_Product_Inspection__c.field-meta.xml
<CustomField>
    <fullName>QC_Product_Inspection__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>QC Product Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>