force-app/main/default/objects/Community__c/fields/QC_Wood_Install__c.field-meta.xml
<CustomField>
    <fullName>QC_Wood_Install__c</fullName>
    <label>QC Wood Install</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>