force-app/main/default/objects/Community__c/fields/Security_Notes__c.field-meta.xml
<CustomField>
    <fullName>Security_Notes__c</fullName>
    <label>Security Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>