force-app/main/default/objects/Community__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <inlineHelpText>Warehouse, Distribution Center, Service Location</inlineHelpText>
    <label>Service Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>