force-app/main/default/objects/Community__c/fields/Use_Builder_Profile_Values__c.field-meta.xml
<CustomField>
    <fullName>Use_Builder_Profile_Values__c</fullName>
    <inlineHelpText>If selecting &quot;No&quot; each QC picklist values have to be manually entered.  Suggest you say &quot;Yes&quot; save the record then manually override individual values.</inlineHelpText>
    <label>Use Builder Profile Values</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>