force-app/main/default/objects/Community__c/validationRules/Business_Hours_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Hours_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL( Use_Builder_Profile_Values__c  , &quot;No&quot;),
ISBLANK(  Business_Hours__c  ))</errorConditionFormula>
    <errorDisplayField>Business_Hours__c</errorDisplayField>
    <errorMessage>Business Hours cannot be left blank.  Select Installer standard M-F.</errorMessage>
</ValidationRule>