force-app/main/default/objects/Community__c/validationRules/Cannot_Change_Name_of_Orphaned_Community.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Name_of_Orphaned_Community</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Name),
    RecordType.Name=&apos;Exception&apos;,
 $Profile.Name &lt;&gt; &apos;System Administrator&apos;
)</errorConditionFormula>
    <errorMessage>You cannot change the name of the Orphaned Community. If you are trying to reassign a House&apos;s Community, go to the House Record and change the Community there.</errorMessage>
</ValidationRule>