force-app/main/default/objects/Community__c/validationRules/PreWalk_and_Job_Start_Require_Inspector.validationRule-meta.xml
<ValidationRule>
    <fullName>PreWalk_and_Job_Start_Require_Inspector</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL( Control_Date_Tasks_Needed__c, &quot;Yes&quot;),
ISBLANK( Inspector__c ))</errorConditionFormula>
    <errorDisplayField>Inspector__c</errorDisplayField>
    <errorMessage>Please enter a name in Pre-Walk when selecting Yes in Pre-Walk &amp; Job Start QC Needed. Person must be a service resource.</errorMessage>
</ValidationRule>