force-app/main/default/objects/Community__c/validationRules/QC_Backsplash_Yes_Require_Day_Count.validationRule-meta.xml
<ValidationRule>
    <fullName>QC_Backsplash_Yes_Require_Day_Count</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL( QC_Tile_Backsplash_Install__c  , &quot;Yes&quot;),
ISBLANK(  Day_Count_Tile_Backsplash__c  ))</errorConditionFormula>
    <errorDisplayField>Day_Count_Tile_Backsplash__c</errorDisplayField>
    <errorMessage>When selecting QC Tile Backsplash Install &quot;Yes&quot; the Day Count for Tile Backsplash must be entered.</errorMessage>
</ValidationRule>